<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="110dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="1dp"
    android:padding="10dp"

    android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >
        <LinearLayout
            android:id="@+id/contactImage"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="@drawable/circle"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/contactImagen"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/ic_person_black_24dp"
                app:layout_anchor="@id/viewA"
                app:layout_anchorGravity="bottom|center"
                />

        </LinearLayout>
        <LinearLayout
            android:paddingHorizontal="20sp"
            android:id="@+id/linearLayoutData"
            android:layout_toEndOf="@+id/contactImage"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_toRightOf="@+id/contactImage"
            >

            <TextView
                android:id="@+id/noti_From"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"

                />

            <TextView
                android:id="@+id/noti_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parentesco"
                android:textColor="@color/red"
                android:maxLines="2"
                android:textSize="12sp"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/noti_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ver"
            android:layout_centerVertical="true"
            android:textColor="@color/red"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/red"
        />
</android.support.v7.widget.CardView>