<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment_menu"
    android:background="@color/white"
    android:orientation="vertical">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"


        >
<android.support.design.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



<android.support.v7.widget.CardView

    android:layout_margin="50dp"
    android:gravity="center"
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:fontFamily="sans-serif"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/cyan3"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    >
    <ImageView
        android:id="@+id/btnEmergecy"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/emergency_icon4"
        />
</android.support.v7.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"

            >

            <Button
                android:padding="5dp"
                android:id="@+id/contactbutton_dashmnenu"
                android:layout_width="match_parent"
                android:layout_height="165dp"
                android:background="#4e9fb3"
                android:text="Mis contactos"
                android:drawableTop="@drawable/ic_contacts_black_24dp"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/white"
                />
            <Button
                android:id="@+id/btn_go_toWritePost"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="165dp"
                android:background="#3c7a89"
                android:text="Publicar "
                android:drawableTop="@drawable/ic_report_problem_black_24dp"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/white"
                />
            <Button
                android:id="@+id/btn_go_to_news"
                android:layout_width="match_parent"
                android:layout_height="165dp"
                android:background="#58b0c6"
                android:text="Ver notficia"
                android:drawableTop="@drawable/ic_report_problem_black_24dp"
                android:padding="5dp"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/white"
                />
            <Button
                android:id="@+id/btn_go_to_map"
                android:layout_width="match_parent"
                android:layout_height="165dp"
                android:background="#70cae1"
                android:text="@string/localizar"
                android:drawableTop="@drawable/ic_person_pin_circle_black_24dp"
                android:padding="5dp"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/white"
                />
            <Button
                android:id="@+id/btn_go_to_setting"
                android:layout_width="match_parent"
                android:layout_height="165dp"
                android:background="#8ee3f9"
                android:text="@string/configuracion"
                android:drawableTop="@drawable/ic_settings_black_24dp"
                android:padding="5dp"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/white"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="165dp"
                android:background="#baeaf7"
                android:text="@string/salir"
                android:drawableTop="@drawable/ic_exit_to_app_black_24dp"
                android:padding="5dp"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                />
        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>

    </LinearLayout>
</ScrollView>

</LinearLayout>